# EAG-Session7-Final-Submission

./: .gitignore  README.md  RUNBOOK.md  create_shortcuts.ps1  start.bat  start.ps1  stop.bat
Gateway/: .env.example  run_gateway.bat
Gateway/llm_gatewayV7/: client.py  embedders.py  main.py  providers.py  pyproject.toml  router.py
S7Code/: run_queries.bat  run_streamlit.bat
S7Code/S7code/: .env.example  agent7.py  app.py  decision.py  gateway.py  log_setup.py  mcp_server.py  memory.py  perception.py  pyproject.toml  run_all_queries.py  tracer.py
S7Code/S7code/sandbox/papers/: agentic_rag.md  agents_survey.md  attention_variants.md  bert.md  chunking_strategies.md  clip.md  code_llm.md  colbert.md  constitutional_ai.md  contrastive_learning.md  credit_assignment.md  cross_encoder.md  embeddings.md  faiss.md  few_shot_prompting.md  flash_attention.md  gemma.md  gpt2.md  gpt3.md  hybrid_retrieval.md  hyde.md  in_context_learning.md  instruction_tuning.md  knowledge_distillation.md  llama.md  llama2.md  long_context.md  mamba.md  memory_augmented.md  mistral.md  mixture_of_experts.md  multimodal.md  phi.md  ppo.md  quantization.md  rag.md  reflexion.md  rlhf.md  rwkv.md  self_consistency.md  (+10 more)
